<resources>
    <string name="app_name">Meus Livros</string>
    <string name="action_about">Sobre</string>
    <string name="action_list">Listagem</string>
    <string name="action_logout">Sair</string>
    <string name="no_books">Bem-vindo(a)!\n\nClique no botão \'+\', no canto inferior direito, para adicionar seu primeiro livro!</string>

    <string name="login_title">Login</string>
    <string name="label_login">Entrar</string>
    <string name="label_user">Usuário</string>
    <string name="label_password">Senha</string>
    <string name="btn_login">Entrar</string>
    <string name="btn_new_user">Novo Usuário</string>

    <string name="label_new_user">Novo Usuário</string>
    <string name="btn_new_account">Cadastrar</string>
    <string name="label_name">Nome</string>
    <string name="label_email">E-mail</string>
    <string name="logo">logo</string>

    <string name="title">Title</string>
    <string name="id">Id</string>

    <string name="label_book_title">Título do livro</string>
    <string name="label_author_name">Autor</string>
    <string name="label_number_pages">Total de páginas</string>
    <string name="label_number_pages_read">Total de páginas lidas</string>
    <string name="btn_save_form">Salvar</string>
    <string name="btn_edit_form">Atualizar</string>
    <string name="btn_delete">Deletar</string>

    <string name="developerName">Desenvolvido por:\nFernanda Lembo Vedovello</string>
    <string name="version">Versão: 1.0</string>

    <string name="main_title">Listagem</string>
    <string name="about_title">Sobre</string>
    <string name="new_book_title">Adicionar novo livro</string>
    <string name="edit_book_title">Editar livro</string>

    <string name="input_empty">Campo obrigatório</string>
    <string name="success_save">Salvo com sucesso</string>
    <string name="fail_save">Erro ao salvar</string>
    <string name="success_delete">Deletado com sucesso</string>
    <string name="fail_delete">Erro ao deletar</string>

</resources>
