<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dip"
    android:layout_marginBottom="10dip"
    android:orientation="vertical">

    <EditText
        android:id="@+id/inputTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_book_title"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/inputAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_author_name"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/inputNumberPages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label_number_pages"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/inputNumberPagesRead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/label_number_pages_read"
        android:importantForAutofill="no"
        android:inputType="number" />

</LinearLayout>
