<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".about.AboutActivity">

    <ImageView
        android:id="@+id/imageView"
        style="@style/About"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo_tf"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="172dp" />

    <TextView
        android:id="@+id/developerName"
        style="@style/About"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/developerName"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/version"
        style="@style/About"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/version"
        android:textSize="18sp" />
</LinearLayout>