<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newuser.NewUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingRight="24dp">

        <TextView
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_new_user" />

        <EditText
            android:id="@+id/inputName"
            style="@style/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/label_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/text_color_primary"
            android:textColorHint="@color/text_color_primary"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="176dp" />

        <EditText
            android:id="@+id/inputEmail"
            style="@style/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/label_email"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textEmailAddress"
            android:textColor="@color/text_color_primary"
            android:textColorHint="@color/text_color_primary"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="176dp" />

        <EditText
            android:id="@+id/inputPassword"
            style="@style/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/label_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/text_color_primary"
            android:textColorHint="@color/text_color_primary"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="237dp" />

        <Button
            android:id="@+id/btnCreate"
            style="@style/Buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_new_account"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="338dp" />

    </LinearLayout>

</ScrollView>